k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: badminton-website
  labels:
    app.kubernetes.io/name: badminton-website
