k8s/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: badminton-website
  labels:
    app.kubernetes.io/name: badminton-website
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: badminton-website
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: badminton-website
        app.kubernetes.io/component: web
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: web
          image: ghcr.io/wingsum93/badminton-website:v0.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 300Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 90
