k8s/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badminton-website
  namespace: badminton-website
  labels:
    app.kubernetes.io/name: badminton-website
    app.kubernetes.io/component: web
spec:
  ingressClassName: traefik
  rules:
    - host: badminton.eric-dream.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: badminton-website
                port:
                  name: http
    - host: badminton.fatboytech.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: badminton-website
                port:
                  name: http
